--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.6.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
