Add user sign up

--- a/src/config-example.json
+++ b/src/config-example.json
@@ -1,5 +1,7 @@
 {
   "axios": {
-    "baseURL": "Insert here axios base URL"
+    "baseURL": "Insert here axios base URL",
+    "authBaseURL": "Authentication Base URL",
+    "authAPIKey": "Authentication API key"
   }
 }
